fix(DataGrid): virtual scrollbar not visible

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
@@ -523,3 +523,18 @@
 .#{$block-class} .#{$pkg-prefix}--button-menu {
   height: $spacing-09;
 }
+
+.#{$block-class}__virtual-scrollbar {
+  &::-webkit-scrollbar {
+    width: 10px;
+    height: 7px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $layer;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+  }
+}
